[Video Capture, UMA] Distinguish out of memory from buffer pool max count exceeded

Currently, failures to obtain a video capture buffer from the buffer pool are
logged all in one bucket. This CL splits the failures into out of memory vs.
buffer pool max count exceeded.

To enable this, the CL changes the interface of media::VideoCaptureBufferPool to
return a result code that breaks out failure cases instead of having a single
failure path.

Bug: 878943
Change-Id: I0a74a8034e936ea02a1ead26a6cb5d916e05e288
Reviewed-on: https://chromium-review.googlesource.com/1220192
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593025}
Former-commit-id: 5061e5d681c6befa9efd8ee8a24e94ef2814f8ba