media/capture/video_capture_types.h
@@ -186,7 +186,6 @@ enum class VideoCaptureError {
 enum class VideoCaptureFrameDropReason {
   kNone = 0,
   kDeviceClientFrameHasInvalidFormat = 1,
-  kDeviceClientFailedToReserveBufferFromBufferPool = 2,
   kDeviceClientLibyuvConvertToI420Failed = 3,
   kV4L2BufferErrorFlagWasSet = 4,
   kV4L2InvalidNumberOfBytesInBuffer = 5,
@@ -199,7 +198,9 @@ enum class VideoCaptureFrameDropReason {
   kWinMediaFoundationReceivedSampleIsNull = 12,
   kWinMediaFoundationLockingBufferDelieveredNullptr = 13,
   kWinMediaFoundationGetBufferByIndexReturnedNull = 14,
-  kMaxValue = 14
+  kBufferPoolMaxBufferCountExceeded = 15,
+  kBufferPoolBufferAllocationFailed = 16,
+  kMaxValue = 16
 };
 
 // Assert that the int:frequency mapping is correct.
